@@ -46,7 +46,7 @@ public class FluidPressureCanvas extends FluidPressureAndFlowCanvas {
         addChild( poolNode );
 
         // Control Panel
-        final ControlPanel controlPanelNode = new ControlPanel( new FluidPressureControlPanel( module ) ) {{
+        final FluidPressureAndFlowControlPanelNode controlPanelNode = new FluidPressureAndFlowControlPanelNode( new FluidPressureControlPanel( module ) ) {{
             setOffset( STAGE_SIZE.getWidth() - getFullBounds().getWidth() - 2, STAGE_SIZE.getHeight() / 2 - getFullBounds().getHeight() / 2 );
         }};
         addChild( controlPanelNode );
