@@ -7,7 +7,6 @@ import edu.colorado.phet.common.phetcommon.view.VerticalLayoutPanel;
 import edu.colorado.phet.fluidpressureandflow.FPAFStrings;
 import edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowModule;
 import edu.colorado.phet.fluidpressureandflow.model.FluidPressureAndFlowModel;
-import edu.colorado.phet.fluidpressureandflow.modules.fluidpressure.FluidPressureControlPanel;
 
 /**
  * @author Sam Reid
@@ -19,7 +18,6 @@ public class FluidFlowControlPanel<T extends FluidPressureAndFlowModel> extends 
 
         addControlFullWidth( new CheckBox( FPAFStrings.RULER, module.rulerVisible ) );
         addControlFullWidth( new UnitsControlPanel<T>( module ) );
-        setBackground( FluidPressureControlPanel.BACKGROUND );
     }
 
     private void addControlFullWidth( JComponent component ) {
